tests/sema/fail/v39_fail_duplicate_product_type.ep
# COMPILE_FAIL: duplicate type Pair
type Pair = {
    left: i64
}

type Pair = {
    right: i64
}
